spacing between team social icons fixed

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1134,7 +1134,7 @@ article blockquote::before {
   margin: 0px;
   padding: 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   list-style: none;
 }
 .team .card .social ul li {
